--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section class="section-mosku text-center">
       <div class="container">
         <h4 class="text-frase">
-          Barberia clásica y contemporanea
+          Barberia clásica y contemporánea
         </h4>
         <h1 class="text-uppercase title title-header">Moskú </h1>
         <p>
@@ -107,14 +107,14 @@
     <div class="container">
       <section class="quienesomos text-center">
         <h3 class="text-uppercase titles">¿Quiénes somos?</h3>
-        <p class="text-secondary">¡Hola! Somos <b>MOSKÚ</b>, una Barberia clasica y contemponarena ubicada en <b>Ramón
+        <p class="text-secondary">¡Hola! Somos <b>MOSKÚ</b>, una Barberia clásica y contemporánea ubicada en <b>Ramón
             Santamarína 1016</b>,
           conformada por dos amigos de toda la vida, <i>Enzo y Nacho.</i></p>
         <div class="row">
           <div class="col-lg-6 mt-4">
             <div class="card card-left">
               <div class="card-body">
-                <img src="images/enzo.jpg" alt="Person One" class="img-fluid rounded-circle w-50">
+                <img src="images/enzo.jpg" alt="Person One" class="img-fluid rounded-circle w-50" loading="lazy">
                 <h3 class="title-card">Enzo Moren</h3>
                 <!-- <p>Lorem ipsum dolor sit amet consectetur</p> -->
                 <div class="redes">
@@ -134,7 +134,7 @@
           <div class="col-lg-6 mt-4">
             <div class="card card-rigth">
               <div class="card-body">
-                <img src="images/enzo.jpg" alt="Person One" class="img-fluid rounded-circle w-50">
+                <img src="images/enzo.jpg" alt="Person One" class="img-fluid rounded-circle w-50" loading="lazy">
                 <h3 class="title-card">Nacho Mendez</h3>
                 <!-- <p>Lorem ipsum dolor sit amet consectetur</p> -->
                 <div class="redes">
