--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--ScrollReveal-->
   <script src="https://unpkg.com/scrollreveal"></script>
   <script>
-    ScrollReveal({ reset: true });
+    ScrollReveal({ reset: false });
   </script>
   <title>Moskú | Barberia</title>
 </head>
