--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="card card-rigth">
               <div class="card-body">
                 <img src="images/enzo.jpg" alt="Person One" class="img-fluid rounded-circle w-50" loading="lazy">
-                <h3 class="title-card">Nacho Mendez</h3>
+                <h3 class="title-card">Nacho Méndez</h3>
                 <!-- <p>Lorem ipsum dolor sit amet consectetur</p> -->
                 <div class="redes">
                   <a href="https://www.instagram.com/enzomoren/">
