--- a/index.html
+++ b/index.html
@@ -163,10 +163,16 @@
         <h3 class="text-uppercase titles">¡Saca turnos!</h3>
         <h4 class="text-secondary ">Consultanos por un turno haciendo click en el icono de <b>whatsapp</b></h4>
         <div class="btn-turno">
-          <a href="https://api.whatsapp.com/send?phone=34123456789">
+          <a href="https://api.whatsapp.com/send?phone=1165117363">
             <i class="fab fa-whatsapp fa-4x"></i>
           </a>
-          <p class="text-secondary p-0 ">¡Dame un turno!</p>
+          <p class="text-secondary p-0 ">¡Dame un turno Nacho!</p>
+        </div>
+        <div class="btn-turno">
+          <a href="https://api.whatsapp.com/send?phone=1138639232">
+            <i class="fab fa-whatsapp fa-4x"></i>
+          </a>
+          <p class="text-secondary p-0 ">¡Dame un turno Enzo!</p>
         </div>
       </section>
     </div>
