--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <!--Section Contactanos-->
   <div id="contactanos">
-    <div class="container">
+    <div class="container d-flex">
       <section class="text-center">
         <h3 class="text-uppercase titles">¡Saca turnos!</h3>
         <h4 class="text-secondary ">Consultanos por un turno haciendo click en el icono de <b>whatsapp</b></h4>
@@ -169,7 +169,7 @@
           <p class="text-secondary p-0 ">¡Dame un turno Nacho!</p>
         </div>
         <div class="btn-turno">
-          <a href="https://api.whatsapp.com/send?phone=1138639232">
+          <a href="https://api.whatsapp.com/send?phone=1165117363">
             <i class="fab fa-whatsapp fa-4x"></i>
           </a>
           <p class="text-secondary p-0 ">¡Dame un turno Enzo!</p>
