--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <!--Section Contactanos-->
   <div id="contactanos">
-    <div class="container d-flex">
+    <div class="container">
       <section class="text-center">
         <h3 class="text-uppercase titles">¡Saca turnos!</h3>
         <h4 class="text-secondary ">Consultanos por un turno haciendo click en el icono de <b>whatsapp</b></h4>
