--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             Santamarína 1016</b>,
           conformada por dos amigos de toda la vida, <i>Enzo y Nacho.</i></p>
         <div class="row">
-          <div class="col-lg-6 mt-4">
-            <div class="card card-left">
+          <div class="col-lg-6 mt-4 card-left">
+            <div class="card ">
               <div class="card-body">
                 <img src="images/enzo.jpg" alt="Person One" class="img-fluid rounded-circle w-50" loading="lazy">
                 <h3 class="title-card">Enzo Moren</h3>
@@ -131,14 +131,13 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 mt-4">
-            <div class="card card-rigth">
+          <div class="col-lg-6 mt-4 card-rigth">
+            <div class="card ">
               <div class="card-body">
-                <img src="images/enzo.jpg" alt="Person One" class="img-fluid rounded-circle w-50" loading="lazy">
+                <img src="images/nacho.jpg" alt="Person One" class="img-fluid rounded-circle w-50" loading="lazy">
                 <h3 class="title-card">Nacho Méndez</h3>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur</p> -->
                 <div class="redes">
-                  <a href="https://www.instagram.com/enzomoren/">
+                  <a href="https://www.instagram.com/_nachomendez/">
                     <i class="fab fa-instagram fa-2x"></i>
                   </a>
                   <a href="#">
