--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 
   <!--Section footer-->
   <footer id="section-footer" class="text-center d-flex justify-content-center align-items-center">
-    <h5 class="text-footer">Realizado por <a href="#">MaGo <i class="fab fa-github"></i></a></h5>
+    <h5 class="text-footer">Realizado por <a href="https://github.com/matijpg">MaGo <i class="fab fa-github"></i></a>
+    </h5>
   </footer>
   <!--Archivo JQuery-->
   <script src="scripts/jquery-3.5.1.min.js"></script>
