--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <!--Archivos bootstrap 4-->
   <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
+  <!--Normalize css-->
+  <link rel="stylesheet" href="./css/normalize.css">
   <!--Custom css-->
   <link type="text/css" rel="stylesheet" href="./css/main.css">
   <!--font awesome-->
