--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h4 class="text-frase">
           Barberia clásica y contemporánea
         </h4>
-        <h1 class="text-uppercase title title-header">Moskú </h1>
+        <h1 class="text-uppercase title title-header m-0">Moskú </h1>
         <p>
           <a href="#quienes" class="btn btn-vermas btn-primary my-2 p-2">Ver más</a>
         </p>
